syntax = "proto3";

package user;


option go_package = "github.com/c4erries/platfor/user-serivce/gen";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
}
